--- a/client/src/components/UI/Button/Button.module.css
+++ b/client/src/components/UI/Button/Button.module.css
@@ -3,7 +3,8 @@
   border: 1px solid #4f005f;
   background: #4f005f;
   color: white;
-  padding: 0.75rem 3.5rem;
+  /* padding: 0.75rem 3.5rem; */
+  padding: 0.75rem 3rem;
   cursor: pointer;
   font-size: 1.15rem;
   border-radius: 30px;
@@ -18,7 +19,7 @@
 .button:focus {
   outline: none;
 }
-
+ 
 button:disabled,
 button:focus:disabled,
 button:hover:disabled,
